[package]
name = "babyjubjub-rs"
version = "0.0.8"
authors = ["arnaucube <root@arnaucube.com>"]
edition = "2018"
license = "GPL-3.0"
description = "BabyJubJub elliptic curve implementation"
repository = "https://github.com/arnaucube/babyjubjub-rs"
readme = "README.md"

[dependencies]
halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves', tag = 'v0.2.0' }
rand = "0.4"
num-bigint = {version = "0.2.2", features = ["rand"]}
lazy_static = "1.4.0"
num-traits = "0.2.8"
